# cube-of-tiny-dares

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  app.py  modal_dare_generator.py  plan.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  tiny_dare_idea.yml
.github/workflows/: ci.yml
.workflow/build-small-hackathon/: plan.md  state.json
hardware/esp32_tiny_dares/: README.md  esp32_tiny_dares.ino
hardware/waveshare_tiny_dares/: README.md
hardware/waveshare_tiny_dares/firmware/: platformio.ini
hardware/waveshare_tiny_dares/firmware/src/: audio.cpp  audio.h  buttons.cpp  buttons.h  config.h  display.cpp  display.h  geolocation.cpp  geolocation.h  imu.cpp  imu.h  lv_conf.h  main.cpp  messages.cpp  messages.h  motion.h  network.cpp  network.h  notes.cpp  notes.h  pet.cpp  pet.h  storage.cpp  storage.h  timekeep.cpp  timekeep.h  tiny_dares_client.cpp  tiny_dares_client.h  tls_roots.h  touch.cpp  touch.h  weather.cpp  weather.h
hardware/waveshare_tiny_dares/firmware/src/assets/: agentgotchi_assets.cpp  agentgotchi_assets.h
tests/: test_app.py  test_core.py  test_modal_client.py
tiny_dares/: __init__.py  core.py  modal_client.py
